@@ -1,3 +1,7 @@
+2003-09-30	Mike Bourgeous		<nitrogen@slimetech.com>
+
+	* Added tl880_get_osdmem_offset() to tl880cursor.c.
+
 2003-09-29	Mike Bourgeous		<nitrogen@slimetech.com>
 
 	* More cleanup work on tl880cursor.c.
